--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,11 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="digite_nombre">Nombre</string>
+    <string name="deuda">Valor deuda</string>
+    <string name="guardar">Guardar</string>
+    <string name="buscar">Buscar</string>
+    <string name="ingresar">Ingresar</string>
+    <string name="menu">menu</string>
+    <string name="campoobligatorio">*Campo obligatorio</string>
+    <string name="crear">Crear</string>
 </resources>
