Se soluciona problema con la tabla de registro y se se crean algunos fragmentos.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application tutor</string>
+    <string name="app_name">Mis deudores</string>
 
     <string name="register">Registro</string>
     <string name="registro">REGISTRO</string>
